Bug 333534 - Creating aknotes plasmoid crashes kontact
Summary: Creating aknotes plasmoid crashes kontact
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
: 333923 334153 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-04-17 13:03 UTC by Mark
Modified: 2014-05-01 00:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mark 2014-04-17 13:03:56 UTC
Application: kontact (4.13)
KDE Platform Version: 4.13.0
Qt Version: 4.8.5
Operating System: Linux 3.14.1-1-ARCH x86_64
Distribution (Platform): Archlinux Packages

-- Information about the crash:
I've tried to reproduce this with others, but i seemingly am the only one who can make it crash.

What i did is this:
- Create two aknotes plasmoids
- fill in one, leave the other as is. Don't change anything

The notes work just fine, but when i start Kontact i get the crash.

The crash can be reproduced every time.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
To enable execution of this file add
	add-auto-load-safe-path /usr/lib/libstdc++.so.6.0.19-gdb.py
line to your configuration file "/home/mark/.gdbinit".
To completely disable this security protection add
	set auto-load safe-path /
line to your configuration file "/home/mark/.gdbinit".
For more information about this security protection see the
"Auto-loading safe path" section in the GDB manual.  E.g., run from the shell:
	info "(gdb)Auto-loading safe path"
[Current thread is 1 (Thread 0x7fea121d3800 (LWP 2431))]

Thread 4 (Thread 0x7fe9f2e4d700 (LWP 2432)):
#0  0x00007fea097b804f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007fea0cf9094d in ?? () from /usr/lib/libQtWebKit.so.4
#2  0x00007fea0cf90989 in ?? () from /usr/lib/libQtWebKit.so.4
#3  0x00007fea097b40a2 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007fea0f76bd1d in clone () from /usr/lib/libc.so.6

Thread 3 (Thread 0x7fe9f264c700 (LWP 2433)):
#0  0x00007fea097b804f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007fea0ccd244d in ?? () from /usr/lib/libQtWebKit.so.4
#2  0x00007fea0cfc00e6 in ?? () from /usr/lib/libQtWebKit.so.4
#3  0x00007fea097b40a2 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007fea0f76bd1d in clone () from /usr/lib/libc.so.6

Thread 2 (Thread 0x7fe99ed04700 (LWP 2439)):
#0  0x00007fea097b7500 in __pthread_mutex_unlock_usercnt () from /usr/lib/libpthread.so.0
#1  0x00007fea0922d751 in g_mutex_unlock () from /usr/lib/libglib-2.0.so.0
#2  0x00007fea091eb498 in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#3  0x00007fea091ebc83 in ?? () from /usr/lib/libglib-2.0.so.0
#4  0x00007fea091ebe6c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#5  0x00007fea0fed96a6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x00007fea0feab6cf in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#7  0x00007fea0feab9c5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#8  0x00007fea0fdaa4df in QThread::exec() () from /usr/lib/libQtCore.so.4
#9  0x00007fea0fdacb7f in ?? () from /usr/lib/libQtCore.so.4
#10 0x00007fea097b40a2 in start_thread () from /usr/lib/libpthread.so.0
#11 0x00007fea0f76bd1d in clone () from /usr/lib/libc.so.6

Thread 1 (Thread 0x7fea121d3800 (LWP 2431)):
[KCrash Handler]
#5  0x00007fe9ab152d03 in KNotesSummaryWidget::createNote (this=this@entry=0x1507b50, item=..., counter=3) at /home/mark/kdepim/src/kdepim-4.13.0/kontact/plugins/knotes/summarywidget.cpp:183
#6  0x00007fe9ab153729 in KNotesSummaryWidget::displayNotes (this=this@entry=0x1507b50, parent=..., counter=@0x7fff5b5a9adc: 3) at /home/mark/kdepim/src/kdepim-4.13.0/kontact/plugins/knotes/summarywidget.cpp:147
#7  0x00007fe9ab15373d in KNotesSummaryWidget::displayNotes (this=this@entry=0x1507b50, parent=..., counter=@0x7fff5b5a9adc: 3) at /home/mark/kdepim/src/kdepim-4.13.0/kontact/plugins/knotes/summarywidget.cpp:150
#8  0x00007fe9ab153a9b in KNotesSummaryWidget::updateFolderList (this=0x1507b50) at /home/mark/kdepim/src/kdepim-4.13.0/kontact/plugins/knotes/summarywidget.cpp:121
#9  0x00007fea0fec06ea in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#10 0x00007fea0ff0a474 in QAbstractItemModel::rowsInserted(QModelIndex const&, int, int) () from /usr/lib/libQtCore.so.4
#11 0x00007fea0fea511e in QAbstractItemModel::endInsertRows() () from /usr/lib/libQtCore.so.4
#12 0x00007fea0e726335 in ?? () from /usr/lib/libakonadi-kde.so.4
#13 0x00007fea0e72687a in ?? () from /usr/lib/libakonadi-kde.so.4
#14 0x00007fea0fec06ea in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#15 0x00007fea0e749a12 in Akonadi::ItemFetchJob::itemsReceived(QList<Akonadi::Item> const&) () from /usr/lib/libakonadi-kde.so.4
#16 0x00007fea0e74b3ab in ?? () from /usr/lib/libakonadi-kde.so.4
#17 0x00007fea0e75d27b in ?? () from /usr/lib/libakonadi-kde.so.4
#18 0x00007fea0fec4a8e in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#19 0x00007fea108aaf0c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#20 0x00007fea108b14d0 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#21 0x00007fea115c988a in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#22 0x00007fea0feaca6d in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#23 0x00007fea0feafaad in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/libQtCore.so.4
#24 0x00007fea0fed9dc3 in ?? () from /usr/lib/libQtCore.so.4
#25 0x00007fea091ebb84 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#26 0x00007fea091ebdc8 in ?? () from /usr/lib/libglib-2.0.so.0
#27 0x00007fea091ebe6c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#28 0x00007fea0fed9685 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#29 0x00007fea10947fa6 in ?? () from /usr/lib/libQtGui.so.4
#30 0x00007fea0feab6cf in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#31 0x00007fea0feab9c5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#32 0x00007fea0feb0ae9 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#33 0x00000000004036d0 in main (argc=1, argv=0x7fff5b5aa828) at /home/mark/kdepim/src/kdepim-4.13.0/kontact/src/main.cpp:219

Reported using DrKonqi
Comment 1 Laurent Montel 2014-04-17 13:39:09 UTC
Git commit 72af9b93accb76639100acb72d3de1faeae94168 by Montel Laurent.
Committed on 17/04/2014 at 13:38.
Pushed by mlaurent into branch 'KDE/4.13'.

Fix Bug 333534 - Creating aknotes plasmoid crashes kontact

FIXED-IN: 4.13.1

M  +10   -8    knotes/tests/apps/knotesakonadiapp.cpp
M  +6    -1    kontact/plugins/knotes/summarywidget.cpp
M  +3    -1    noteshared/noteutils.cpp
M  +1    -1    noteshared/widget/notelistwidget.cpp

http://commits.kde.org/kdepim/72af9b93accb76639100acb72d3de1faeae94168
Comment 2 Jekyll Wu 2014-04-27 10:12:43 UTC
*** Bug 333923 has been marked as a duplicate of this bug. ***
Comment 3 Jekyll Wu 2014-05-01 00:07:03 UTC
*** Bug 334153 has been marked as a duplicate of this bug. ***