Fix Bug 333534 - Creating aknotes plasmoid crashes kontact

FIXED-IN: 4.13.1
BUG: 333534