tests/apps/knotesakonadiapp.cpp
@@ -79,14 +79,16 @@ void KNotesAkonadiApp::slotItemChanged(const Akonadi::Item &item, const QSet<QBy
         }
         if (set.contains("PLD:RFC822")) {
             KMime::Message::Ptr noteMessage = item.payload<KMime::Message::Ptr>();
-            const KMime::Headers::Subject * const subject = noteMessage ? noteMessage->subject(false) : 0;
-            note->title()->setText(subject ? subject->asUnicodeString() : QString());
-            if ( noteMessage->contentType()->isHTMLText() ) {
-                note->editor()->setAcceptRichText(true);
-                note->editor()->setHtml(noteMessage->mainBodyPart()->decodedText());
-            } else {
-                note->editor()->setAcceptRichText(false);
-                note->editor()->setPlainText(noteMessage->mainBodyPart()->decodedText());
+            if (noteMessage) {
+                const KMime::Headers::Subject * const subject = noteMessage->subject(false);
+                note->title()->setText(subject ? subject->asUnicodeString() : QString());
+                if ( noteMessage->contentType()->isHTMLText() ) {
+                    note->editor()->setAcceptRichText(true);
+                    note->editor()->setHtml(noteMessage->mainBodyPart()->decodedText());
+                } else {
+                    note->editor()->setAcceptRichText(false);
+                    note->editor()->setPlainText(noteMessage->mainBodyPart()->decodedText());
+                }
             }
         }
         if (set.contains("ATR:NoteDisplayAttribute")) {
